--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "ws": "^3.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
