--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
     "express": "^4.15.2",
-    "ws": "^3.1.0"
+    "uuid": "^3.1.0",
+    "ws": "^3.1.0",
+    "jquery": "^3.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
@@ -24,9 +26,11 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.1",
     "gulp": "^3.9.1",
+    "gulp-apidoc": "^0.2.6",
     "gulp-clean-css": "^3.8.0",
     "gulp-concat": "^2.6.1",
     "gulp-inject": "^4.2.0",
+    "gulp-jsdoc3": "^1.0.1",
     "gulp-mocha": "^4.3.0",
     "gulp-replace": "^0.6.1",
     "gulp-sourcemaps": "^2.6.0",
