--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
     "express": "^4.15.2",
+    "jquery": "^3.2.1",
     "uuid": "^3.1.0",
-    "ws": "^3.1.0",
-    "jquery": "^3.2.1"
+    "vue": "^2.4.4",
+    "ws": "^3.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
